build(2.0.0): Upgrade Spring Boot to 3.2.2, Kotlin to 1.9.22, Junit4 -> Junit5.